feat: added imfge link

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sergey Parshutsich</title>
 </head>
 <body>
+
+  <h1>Sergey Parshutsich</h1>
+  <img src="Serg_foto.png" alt="my photo">
   
 </body>
 </html>
